Output taint propagation

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ soot-infoflow-android/sootOutput
 soot-infoflow-android/test
 soot-infoflow-android/testAPKs
 soot-infoflow-android/tmp.log
+monster-out/
