--- a/soot-infoflow-android/monster.properties
+++ b/soot-infoflow-android/monster.properties
@@ -1,4 +1,4 @@
 max_paths_num=-1
-exported_services=""
-exported_receivers=""
-exported_activities=""
+exported_services=/Users/chenxiong/workspace/from-Daniel/walisms_Services.txt
+exported_receivers=/Users/chenxiong/workspace/from-Daniel/walisms_Receivers.txt
+exported_activities=/Users/chenxiong/workspace/from-Daniel/walisms_Activities.txt
