--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ monster.properties
 download-monsterout.sh
 soot-infoflow-android/monster.properties
 soot-infoflow-android/MSTCALLBACKS.txt
+.DS_Store
