--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ download-monsterout.sh
 soot-infoflow-android/monster.properties
 soot-infoflow-android/MSTCALLBACKS.txt
 .DS_Store
+soot-infoflow-android/BatchRunner_lib/
+soot-infoflow-android/BatchRunner.jar
